<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:padding="40dp"
              android:background="@color/darker_background"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <ImageView
        android:id="@+id/profile_detail_pic"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_marginBottom="40dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/empty_profile_pic"
        android:contentDescription="@string/detail_profilepic_description"/>

    <View
        android:layout_height="1dp"
        android:layout_width="match_parent"
        android:background="#77000000"
        android:layout_marginBottom="40dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp">

        <TextView
            style="@style/keyValueEntryKey"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detail_identifier"
            />

        <TextView
            android:id="@+id/profile_detil_identifier"
            style="@style/keyValueEntryValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp">

        <TextView
            style="@style/keyValueEntryKey"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detail_name"
            />

        <TextView
            android:id="@+id/profile_detail_name"
            style="@style/keyValueEntryValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </RelativeLayout>

    <Button
        style="?android:buttonBarButtonStyle"
        android:id="@+id/profile_full"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/profile_show_full"/>
</LinearLayout>