<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:baselineAligned="false"
              android:orientation="vertical"
              tools:context="it.polimi.spf.example.trillo.chat.ChatThreadActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:orientation="vertical"
        android:paddingStart="5dp"
        android:paddingEnd="5dp">

        <ListView
            android:id="@+id/message_list_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:divider="@null"
            android:stackFromBottom="true"
            android:transcriptMode="normal" >
        </ListView>

        <TextView
            style="@style/emptyMessage"
            android:id="@+id/message_list_emptymessage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/message_list_emptymessage"
            android:visibility="gone" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        android:padding="8dp" >

        <EditText
            android:id="@+id/message_input"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:hint="@string/message_input_hint"

            android:inputType="text" />

        <ImageButton
            android:id="@+id/message_send_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@android:drawable/ic_menu_send"
            android:contentDescription="@string/conversation_send_message_contentdesc"/>
    </LinearLayout>

</LinearLayout>